# AcronymDecoder

./: Cargo.toml  README.md  acronyms.csv  build.rs  main.rs  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
