[package]
name = "acronym-lookup"
version = "0.1.0"
edition = "2021"
description = "Hover over a word, press Ctrl+Shift+A, get the definition from your personal CSV."

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
csv = "1"

[profile.release]
lto       = true
opt-level = "z"
strip     = true
codegen-units = 1
